--- a/card.html
+++ b/card.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card</title>
-    <link rel="stylesheet" href="/bootstrap-5.3.1-dist/css/bootstrap-grid.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
 </head>
 
 <body>
-    <div class="container ">
+    <div class="container">
         <div class="row">
             <!-- card1 -->
             <div class="col-4">
@@ -22,7 +23,8 @@
                         <h1 class="card-title" style="background: tomato;">
                             Title
                         </h1>
-                        <p class="card-text" style="background: blueviolet;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, error!
+                        <p class="card-text" style="background: blueviolet;">Lorem, ipsum dolor sit amet consectetur
+                            adipisicing elit. Minima, error!
                         </p>
                     </div>
                 </div>
@@ -32,6 +34,7 @@
             <div class="col-4 border">
 
                 <div class="card">
+                    <div class="card-header">I ma header</div>
                     <img src="https://picsum.photos/200/300" alt="img" class="card-img-top">
                     <div class="card-body">
                         <h1 class="card-title">
@@ -44,7 +47,186 @@
             </div>
         </div>
     </div>
-    <script src="/bootstrap-5.3.1-dist/js/bootstrap.bundle.js"></script>
+    <div class="container ">
+        <div class="row  my-5">
+            <!-- card group -->
+            <div class="card-group">
+                <!-- card 1 -->
+                <div class="card">
+                    <div class="card-header text-center">
+                        Header
+                    </div>
+                    <img src="https://picsum.photos/200/300" alt="image" class="card-img-top">
+                    <div class="card-body">
+                        <div class="card-text">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis eos tenetur maiores error
+                            beatae laborum soluta fugit saepe laboriosam rerum.
+                        </div>
+                        <div class="card-footer text-warning text-center">Footer </div>
+                    </div>
+                </div>
+
+                <!-- card 2 -->
+
+                <div class="card">
+                    <div class="card-header text-center">
+                        Header
+                    </div>
+                    <img src="https://picsum.photos/200/300" alt="image" class="card-img-top">
+                    <div class="card-body">
+                        <div class="card-text">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis eos tenetur maiores error
+                            beatae laborum soluta fugit saepe laboriosam rerum.
+                        </div>
+                        <div class="card-footer text-warning  text-center">Footer </div>
+                    </div>
+                </div>
+
+                <!--card 3  -->
+
+                <div class="card">
+                    <div class="card-header text-center">
+                        Header
+                    </div>
+                    <img src="https://picsum.photos/200/300" alt="image" class="card-img-top">
+                    <div class="card-body">
+                        <div class="card-text">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis eos tenetur maiores error
+                            beatae laborum soluta fugit saepe laboriosam rerum.
+                        </div>
+                        <div class="card-footer text-warning text-center">Footer </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+
+
+
+    </div>
+
+    <!-- Horizontal cards -->
+
+    <div class="container ">
+
+
+        <div class="row my-5 ">
+            <div class="card-group">
+                <!-- card-1 -->
+                <div class="card bg-primary text-white mx-2">
+                    <div class="card-header text-center">Header</div>
+                    <div class="card-body">
+                        <div class="card-title text-center">Title</div>
+                        <div class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, tempora.
+                        </div>
+
+                    </div>
+                    <div class="card-footer text-center">
+                        Footer
+                    </div>
+
+                </div>
+                <!-- card-2 -->
+                <div class="card text-white bg-black mx-2">
+                    <div class="card-header text-center">Header</div>
+                    <div class="card-body">
+                        <div class="card-title  text-center">Title</div>
+                        <div class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, tempora.
+                        </div>
+
+                    </div>
+                    <div class="card-footer text-center">
+                        Footer
+                    </div>
+
+                </div>
+                <!-- card-3 -->
+                <div class="card text-white bg-warning mx-2">
+                    <div class="card-header text-center">Header</div>
+                    <div class="card-body">
+                        <div class="card-title text-center">Title</div>
+                        <div class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, tempora.
+                        </div>
+
+                    </div>
+                    <div class="card-footer text-center">
+                        Footer
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="container">
+        <!-- Vertical align card  -->
+        <div class="row my-5" style="width: 300px;">
+            <div class="col-12  my-2">
+
+                <div class="card border-primary">
+                    <div class="card-header text-center">
+                        Header
+                    </div>
+                    <div class="card-body">
+                        <div class="card-text text-primary">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora harum totam neque
+                            voluptatum vel!
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-12 my-2">
+
+                <div class="card border-success">
+                    <div class="card-header text-center">
+                        Header
+                    </div>
+                    <div class="card-body">
+                        <div class="card-text text-success">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora harum totam neque
+                            voluptatum vel!
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-12 my-2">
+
+                <div class="card border-danger">
+                    <div class="card-header text-center">
+                        Header
+                    </div>
+                    <div class="card-body">
+                        <div class="card-text text-danger">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora harum totam neque
+                            voluptatum vel!
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
