--- a/grid.html
+++ b/grid.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid</title>
-    <link rel="stylesheet" href="/bootstrap-5.3.1-dist/css/bootstrap-grid.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <style>
         [class*="col"] {
             padding: 1rem;
@@ -14,7 +15,8 @@
             border: 2px solid white;
 
         }
-        .child{
+
+        .child {
             background: blue;
         }
     </style>
@@ -43,7 +45,7 @@
 
         </div>
         <!-- creating breakpoints -->
-        <h1 >BreakPoints</h1>
+        <h1>BreakPoints</h1>
         <div class="row">
             <div class="col-sm-4">col1</div>
             <div class="col-md-4">col2</div>
@@ -54,7 +56,7 @@
     </div>
     <div class="container border">
         <h1>Vertical ALignment</h1>
-        <div class="row align-items-center"   style="height: 400px;">
+        <div class="row align-items-center" style="height: 400px;">
             <div class="col">col1</div>
             <div class="col">col2</div>
             <div class="col">col3</div>
@@ -66,14 +68,25 @@
 
             <!-- gutters are used for spacing between the grid coloumns -->
 
-            <div class="col-6"><div class="child">1</div></div>
-            <div class="col-6"><div class="child">2</div></div>
-            <div class="col-6"><div class="child">3</div></div>
-            <div class="col-6"><div class="child">4</div></div>
+            <div class="col-6">
+                <div class="child">1</div>
+            </div>
+            <div class="col-6">
+                <div class="child">2</div>
+            </div>
+            <div class="col-6">
+                <div class="child">3</div>
+            </div>
+            <div class="col-6">
+                <div class="child">4</div>
+            </div>
         </div>
+
     </div>
-    
-    <script src="/bootstrap-5.3.1-dist/js/bootstrap.bundle.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
